# FaceAttenDANCE

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  limpiar_caracteres.py  pyproject.toml  pytest.ini  requirements-dev.tx  requirements-dev.txt  requirements.txt  setup.py  test_quick.py
.github/workflows/: ci.yml  docs.yml
docs/: API.md  Guia_de_Configuracion_de_Entorno_de_Desarrollo_WSL2+Docker+Git+VSCode.md  developer_guide.md  mkdocs.yml  user_manual.md
docs/thesis/: 01_introduccion.md  02_estado_del_arte.md  03_arquitectura.md  04_implementacion.md  05_resultados.md  06_conclusiones.md
examples/: generar_datos_prueba.py  quickstart.py
proposal/: README.md
proposal/v1.0/: propuesta_tesis_FaceAttenDANCE.docx
scripts/: backup.ps1  backup.sh
scripts/sql/: schema.sql
src/core/: asociador.py  asociador.py.bak
src/database/: repositorio_base.py  repositorio_base.py.bak
tests/fixtures/: README.md  conftest.py
tests/unit/: test_asociador.py
